src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AcademicFocus__c</fullName>
        <label>专长领域</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressHouse__c</fullName>
        <label>家庭地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BestPlaceToVsit__c</fullName>
        <label>最佳拜访地点</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BestTimeToVisit__c</fullName>
        <label>最佳拜访时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Colleges__c</fullName>
        <label>本科毕业院校</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsultingHours__c</fullName>
        <label>门诊时间</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectorMajor__c</fullName>
        <label>科室主任专业</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoctoralSupervisor__c</fullName>
        <label>博士生导师</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalConsultationHospital__c</fullName>
        <label>外诊相关医院</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>主要展开领域</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G_webinar__c</fullName>
        <label>G-webinar注册时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <label>业余爱好</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>家庭电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HostAcademicConference__c</fullName>
        <label>主办学术会议</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDNumber__c</fullName>
        <label>身份证号</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KOLCustomer__c</fullName>
        <label>KOL客户</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>国家级</fullName>
                </value>
                <value>
                    <fullName>区域级</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MajorSocialRelations__c</fullName>
        <label>主要社会关系</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorStudentsAndAlumni__c</fullName>
        <label>主要同学及校友</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>专业</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>眼底病科</fullName>
                    <label>眼底病</label>
                </value>
                <value>
                    <fullName>白内障科</fullName>
                    <label>白内障</label>
                </value>
                <value>
                    <fullName>屈光科</fullName>
                </value>
                <value>
                    <fullName>角膜病科</fullName>
                    <label>角膜病</label>
                </value>
                <value>
                    <fullName>青光眼科</fullName>
                    <label>青光眼</label>
                </value>
                <value>
                    <fullName>眼整形科</fullName>
                    <label>眼整形</label>
                </value>
                <value>
                    <fullName>特检科</fullName>
                    <label>特检</label>
                </value>
                <value>
                    <fullName>斜弱视专科</fullName>
                    <label>小儿及斜弱视</label>
                </value>
                <value>
                    <fullName>全科</fullName>
                </value>
                <value>
                    <fullName>眼外伤</fullName>
                </value>
                <value>
                    <fullName>眼肿瘤</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MasterSupervisor__c</fullName>
        <label>硕士生导师</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NativePlace__c</fullName>
        <label>籍贯</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeAddress__c</fullName>
        <label>办公地点</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <label>办公电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OfficesDirector__c</fullName>
        <label>科室主任</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutpatientAddress__c</fullName>
        <label>门诊地点</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostInHospital__c</fullName>
        <label>院内职务</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>职称</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>主任医师</fullName>
                </value>
                <value>
                    <fullName>副主任医师</fullName>
                </value>
                <value>
                    <fullName>主治医师</fullName>
                </value>
                <value>
                    <fullName>住院医师</fullName>
                </value>
                <value>
                    <fullName>主管技师</fullName>
                </value>
                <value>
                    <fullName>技师</fullName>
                </value>
                <value>
                    <fullName>实习医生</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>职级</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelevantProfessionalAndAcademicFunct__c</fullName>
        <label>专业学会职务</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelevantSocialFunctions__c</fullName>
        <label>相关社会职务</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesmanMaintenanceAdvice__c</fullName>
        <label>业务员维护建议</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性别</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>历年学生姓名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudiedAbroad__c</fullName>
        <label>留学经历</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreatmentMeans__c</fullName>
        <label>治疗手段</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wei__c</fullName>
        <label>微信号</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkExperience__c</fullName>
        <label>工作经历</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkTelephone__c</fullName>
        <label>单位电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>YearsSince__c</fullName>
        <label>年手术量（例）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>addressyy__c</fullName>
        <formula>Account.address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>医院地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>科室</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>眼科</fullName>
                </value>
                <value>
                    <fullName>院长室</fullName>
                </value>
                <value>
                    <fullName>设备科</fullName>
                </value>
                <value>
                    <fullName>耗材科</fullName>
                </value>
                <value>
                    <fullName>采购部</fullName>
                </value>
                <value>
                    <fullName>集团</fullName>
                </value>
                <value>
                    <fullName>财务科</fullName>
                </value>
                <value>
                    <fullName>医工科</fullName>
                </value>
                <value>
                    <fullName>器械科</fullName>
                </value>
                <value>
                    <fullName>物资部</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <label>传真</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iskey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否决策人</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>landline__c</fullName>
        <label>座机</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>手机</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>post__c</fullName>
        <label>职务</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>院长</fullName>
                </value>
                <value>
                    <fullName>主任</fullName>
                </value>
                <value>
                    <fullName>医生</fullName>
                </value>
                <value>
                    <fullName>科长</fullName>
                </value>
                <value>
                    <fullName>主管</fullName>
                </value>
                <value>
                    <fullName>护士长</fullName>
                </value>
                <value>
                    <fullName>经理</fullName>
                </value>
                <value>
                    <fullName>技师-</fullName>
                </value>
                <value>
                    <fullName>护士</fullName>
                </value>
                <value>
                    <fullName>工程师</fullName>
                </value>
                <value>
                    <fullName>副主任</fullName>
                </value>
                <value>
                    <fullName>科员</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sbczr__c</fullName>
        <label>设备操作人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>新建本周</label>
    </listViews>
    <recordTypes>
        <fullName>AgentContact</fullName>
        <active>true</active>
        <label>代理商联系人</label>
    </recordTypes>
    <recordTypes>
        <fullName>HospitalContact</fullName>
        <active>true</active>
        <label>医院联系人</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>